feat: update routes to 2.5.1
Routing Recognition and Generation Tools for Python 3

Issue: https://github.com/deepin-community/sig-deepin-sysdev-team/issues/552
Log: update repo

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: routes
 Section: python
 Priority: optional
 Maintainer: Piotr Ożarowski <piotr@debian.org>
-Uploaders: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
+Uploaders: Debian Python Team <team+python@tracker.debian.org>
 Build-Depends: debhelper-compat (= 13), dh-python,
  python3-all,
  python3-setuptools,
